[project]
name = "backend-livros-ebac-python"
version = "0.1.0"
description = ""
authors = [
    {name = "AriOliveira06",email = "ariclenesoliveirabezerra@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
